z-index fix

--- a/src/pages/ManageProduct/ManageProduct.module.css
+++ b/src/pages/ManageProduct/ManageProduct.module.css
@@ -35,4 +35,5 @@
   display: flex;
   gap: 1rem;
   justify-content: center;
+  z-index: 2;
 }
